--- a/web/public/index.html
+++ b/web/public/index.html
@@ -9,6 +9,16 @@
           d="M20.016 11.016v1.969h-12.188l5.578 5.625-1.406 1.406-8.016-8.016 8.016-8.016 1.406 1.406-5.578 5.625h12.188z">
         </path>
       </symbol>
+      <symbol id="icon-minus" viewBox="0 0 20 20">
+        <path
+          d="M16 10c0 0.553-0.048 1-0.601 1h-10.798c-0.552 0-0.601-0.447-0.601-1s0.049-1 0.601-1h10.799c0.552 0 0.6 0.447 0.6 1z">
+        </path>
+      </symbol>
+      <symbol id="icon-plus" viewBox="0 0 20 20">
+        <path
+          d="M16 10c0 0.553-0.048 1-0.601 1h-4.399v4.399c0 0.552-0.447 0.601-1 0.601s-1-0.049-1-0.601v-4.399h-4.399c-0.552 0-0.601-0.447-0.601-1s0.049-1 0.601-1h4.399v-4.399c0-0.553 0.447-0.601 1-0.601s1 0.048 1 0.601v4.399h4.399c0.553 0 0.601 0.447 0.601 1z">
+        </path>
+      </symbol>
     </defs>
   </svg>
   <meta charset="utf-8" />
